<resources>
    <string name="app_name">BasicBank</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_bank">MY BANK</string>
    <string name="online">online</string>
    <string name="phone_number">Phone number</string>
    <string name="balance">Balance</string>
    <string name="slash">/-</string>
    <string name="rs">Rs.</string>
    <string name="name">Name</string>

    <string name="by_priya_katoch">By: Priya Katoch</string>
    <string name="choose_user_to_send_money">Choose User to Send Money</string>
    <string name="transaction_history">Transaction History</string>

    <string name="no_history">No history</string>
    <string name="contact_number">Contact Number:</string>
</resources>
