<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    android:layout_marginBottom="10dp" android:layout_marginTop="10dp" android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_margin="8dp" android:background="#BCA998">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:src="@drawable/person2"
            android:layout_marginTop="-3dp"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#3F51B5"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/phone"
                android:layout_width="31dp"
                android:layout_height="match_parent"
                android:src="@drawable/mobilephone"
                android:layout_marginEnd="5dp" />

            <TextView
                android:id="@+id/userphonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="15sp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:src="@drawable/rupee"
                android:layout_marginTop="23dp"/>

            <TextView
                android:id="@+id/rupee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#141414"
                android:layout_marginTop="30dp" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#141414"
                android:layout_marginTop="30dp" />

            <TextView
                android:id="@+id/rupeeslash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#141414"
                android:layout_marginTop="30dp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>